Add .\ to the file paths

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <span onclick="gtag('event', 'Carousel-Left-Click', {'event_category' : 'Carousel', 'event_label' : 'Carousel-Left-Click'})"> > </span>
         </div>
         <div id="slide1" class="slider-image-div">
-          <img class="slider-image" src="img\Zaure-SharpEN-Yellow-Shirt-2.jpg" alt="Zaureᐩ&trade; brand, Yellow color Casual Shirt 
+          <img class="slider-image" src=".\img\Zaure-SharpEN-Yellow-Shirt-2.jpg" alt="Zaureᐩ&trade; brand, Yellow color Casual Shirt 
           with Chinese Collar made from 100% Cotton best fabric. Wore by a handsome good-looking man wearing sun glasses, jeans & shoes.">
         </div>
         <div id="slide2" class="slider-image-div">
