Social Media added & other detail removed.

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
         <br>
         Clean, straight forward designs, which stand the test of time. We bring you the latest in fashion, the colors in the trend & the best fabrics which are NABL tested & certified.
         </h1>
-        <div id="yt-wrap">
+        <!-- <div id="yt-wrap">
           <iframe id="ytplayer" onclick="gtag('event', 'Video1 click', {'event_category' : 'Video', 'event_label' : 'Video1 Click'});" src="https://www.youtube.com/embed/EzN6NpikZw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+        </div> -->
         </main>
         <form name="get-email" href="">
           <label id= "namelabel" for="name"></label>
@@ -165,11 +165,11 @@
         <small id="submess">Subscribe above to receive exclusive offers & be the first to know.</small>
 
         <div id="sm-handles">
-          <a href="https://www.facebook.com/unmaskyoursmile" onclick="gtag('event', 'FB click', {'event_category' : 'Social Media', 'event_label' : 'Facebook Click'});" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
-          <a href="https://www.instagram.com/unmaskyoursmile" onclick="gtag('event', 'Insta click', {'event_category' : 'Social Media', 'event_label' : 'Insta Click'});" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
-          <a href="https://wa.me/916356016259?text=Hello!%20I%20just%20visited%20your%20website.%20I%20am%20interested%20in%20knowing%20more%20about%20unmask." onclick="gtag('event', 'WhatsApp click', {'event_category' : 'Social Media', 'event_label' : 'WhatsApp Click'});" target="_blank"><div id="whatsapp-link" class="sm-icon whatsapp"><img src="img\whatsapp.png"></div></a>
+          <a href="https://www.fb.me/zaure.plus" onclick="gtag('event', 'FB click', {'event_category' : 'Social Media', 'event_label' : 'Facebook Click'});" target="_blank"><div id="fb-link" class="sm-icon fb"><img src="img\fb.png"></div></a>
+          <a href="https://www.instagram.com/zaure.plus" onclick="gtag('event', 'Insta click', {'event_category' : 'Social Media', 'event_label' : 'Insta Click'});" target="_blank"><div id="insta-link" class="sm-icon insta"><img src="img\insta.png"></div></a>
+          <a href="https://wa.me/917575806994?text=Hello!%20I%20just%20visited%20your%20website.%20I%20am%20interested%20in%20your%20range%20of%20shirts." onclick="gtag('event', 'WhatsApp click', {'event_category' : 'Social Media', 'event_label' : 'WhatsApp Click'});" target="_blank"><div id="whatsapp-link" class="sm-icon whatsapp"><img src="img\whatsapp.png"></div></a>
         </div>
-        <section id="why">
+        <!-- <section id="why">
           <h3> Why do we need Transparent Masks?</h3>
           <a href="https://www.thehindu.com/sci-tech/health/should-we-switch-to-transparent-masks/article32079535.ece" target="_blank">As per this study by "Access Mantra Foundation" & "Sanket Foundation" as published in "The Hindu", more than 73% people struggle in communicating with masks on.</a>
           <div id="hindu-pie">
@@ -403,7 +403,7 @@
             <p>Read More ></p>
           </div>
           </a>
-        </div>
+        </div> -->
 </section>
 
 
@@ -430,7 +430,7 @@
     </section>  -->
 
     <footer>
-      <h5>&copy; 2020 www.unmaskyoursmile.in</h5>  
+      <h5>&copy; 2020 www.nirrvanatexmills.com</h5>  
     </footer>
   
 <script src="normalize/vendor/modernizr-3.11.2.min.js"></script>
