--- a/index.html
+++ b/index.html
@@ -90,12 +90,17 @@
   <!-- End Google Tag Manager (noscript) -->
   <section id="above">
     <section id = "data">
-      <img id="main-logo" src="img\zaureplus-strip.png">
       <header>
-        <h1>
-          <span class="type-anime" data-elements="Latest Fashion, Trendy Colors, Best Fabrics"></span>
-          <span class="cursor-anime">&nbsp;</span>
-        </h1>
+
+      <img id="main-logo" src="img\zaureplus-strip.png">
+      
+      <h1 class="wrapper">
+        <ul class="flip3">
+          <li>Latest Fashion</li>
+          <li>Trendy Colors</li>
+          <li>Best Fabrics</li>
+        </ul>
+      </h1>
       </header>
       <section id="carousel">
         <div id="button-left" onclick="plusSlides(-1)" class="slider-button">
