--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
       </section>
       <main>
-        <h1 id="message">Zaureᐩ&trade;, we make the best shirts for you, the star of the party. 
+        <h1 id="message">Zaureᐩ&trade;, we make the best shirts for you, to star the party. 
         <br>
         <br>
         Clean, straight forward designs, which stand the test of time. We bring you the latest in fashion, the colors in the trend & the best fabrics which are NABL tested & certified.
