Adding Original images

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </section>  -->
 
     <footer>
-      <h5>&copy; 2021 Zaureᐩ </h5>  
+      <h5>&copy; 2021 Zaureᐩ&trade; </h5>  
     </footer>
   
 <script src="normalize/vendor/modernizr-3.11.2.min.js"></script>
